--- a/src/modules/receiptapp/index.css
+++ b/src/modules/receiptapp/index.css
@@ -18,3 +18,24 @@ body {
 #root {
   height: 100%;
 }
+
+@media print {
+  body * {
+    visibility: hidden;
+  }
+  .receipt-print,
+  .receipt-print * {
+    visibility: visible;
+  }
+  .receipt-print {
+    position: absolute;
+    left: 0;
+    top: 0;
+  }
+}
+
+@media not print {
+  .receipt-print {
+    display: none;
+  }
+}
